# PyEarthTools

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  MONOREADME.md  NOTICE  NOTICE.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
archives/template-archive/: README.md  pyproject.toml
archives/template-archive/src/edit_archive_template/: __init__.py  structured.py  template.py
archives/ukmo/: pyproject.toml
archives/ukmo/.ipynb_checkpoints/: README-checkpoint.md
archives/ukmo/src/edit_archive_ukmo/: __init__.py  _processed.py  _stash.py  mass.py  um.py
archives/ukmo/src/edit_archive_ukmo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: .gitlab-ci.yml  .yamllint.yml  README.md  pyproject.toml
data/Examples/: 1-Basic_Indexing.ipynb  4-UsingTheInBuiltOperations.ipynb  7-CustomDataIndex.ipynb  8-Catalog.ipynb
data/src/edit/data/: __init__.py  catalog.py  collection.py  commands.py  decorators.py  exceptions.py  time.py  warnings.py
data/src/edit/data/archive/: __init__.py  extensions.py  utils.py
data/src/edit/data/archive/registered/: NCI.yaml  README.md  UKMO.yaml  __init__.py
data/src/edit/data/download/: __init__.py  templates.py
data/src/edit/data/download/cds/: ERA5.py  _ERA5.py  __init__.py  cds.py
data/src/edit/data/download/ecmwf_opendata/: __init__.py  convenience.py  opendata.py  opendata_variables.py
data/src/edit/data/indexes/: __init__.py  cacheIndex.py  combine.py  decorators.py  extensions.py  fake.py  indexes.py  intake.py
data/src/edit/data/indexes/templates/: __init__.py  structured.py
data/src/edit/data/indexes/utilities/: __init__.py  delete_files.py  dimensions.py  fileload.py  folder_size.py  spellcheck.py  structure.py
data/src/edit/data/indexes/utilities/mixins/: __init__.py  call_redirect.py  catalogs.py  index_repr.py
data/src/edit/data/operations/: __init__.py  aggregation.py  binning.py  forecast_op.py  index_operations.py  index_routines.py  interpolation.py  percentile.py
data/src/edit/data/patterns/: __init__.py  argument.py  default.py  direct.py  expanded_date.py  static.py  utils.py
data/src/edit/data/save/: __init__.py  array.py  dataset.py  dispatcher.py  json.py  plot.py  utils.py
data/src/edit/data/static/: __init__.py  geographic.py
data/src/edit/data/static/_geographic/: __init__.py  retrieval.py
data/src/edit/data/transform/: __init__.py  aggregation.py  attributes.py  coordinates.py  default.py  derive.py  dimensions.py  interpolation.py  mask.py  optimisation.py  region.py  transform.py  utils.py  values.py  variables.py
data/src/edit/data/transform/normalisation/: __init__.py  _utils.py  default.py  normalise.py  unnormalise.py
data/tests/data/: FakeDataIndex.py
data/tests/data/archive/: test_known_files.py
data/tests/data/indexes/: test_decorators.py
data/tests/data/time/: _test_single.py  test_time.py
data/tests/data/transform/: test_derive.py
data/tests/data/utils/: fakedata.py
docs/: Roadmap.md
documentation/: .gitlab-ci.yml  README.md  mkdocs.yml
documentation/docs/: index.md
documentation/docs/documentation/: index.md
documentation/docs/documentation/data/: index.md  transforms.md
documentation/docs/documentation/pipeline/: index.md
documentation/docs/documentation/training/: yaml.md
documentation/docs/examples/: 1 - Benefits.ipynb  2 - Retrieving More Data.ipynb  3 - Pipelines.ipynb  index.md
documentation/docs/models/: adding.md  commands.md  configuration.md  index.md
documentation/docs/models/Usage/: advanced.md
documentation/docs/started/: index.md
documentation/docs/started/installation/: NCI-Developer.md  manual.md
documentation/scripts/: gen_ref_pages.py
dset/training/: __init__.py
dset/training/data/: __init__.py  context.py  errors.py  filters.py  templates.py  transforms.py  utils.py
dset/training/data/indexes/: __init__.py  cache.py  coordinate.py  data_interface.py  general.py  indexes.py  interpolate.py
dset/training/data/interfaces/: __init__.py  data_interface.py  indexes.py  normalisation.py
dset/training/data/iterators/: __init__.py  combine.py  iterator.py  temporal.py
dset/training/data/loaders/: dali.py  pytorch.py
dset/training/data/operations/: __init__.py  filters.py  patch.py  reshape.py  (+3 more)
dset/training/models/: __init__.py  import_networks.py  networks.yaml  utils.py
dset/training/modules/: __init__.py
dset/training/trainer/: __init__.py  commands.py  from_yaml.py  index.py  template.py  trainer.py  yaml.py
src/dset/training/: __init__.py
src/edit/pipeline/: __init__.py  config.py  controller.py  exceptions.py  filters.py  graph.py  iterators.py  marker.py  operation.py  parallel.py  pipeline.yaml  samplers.py  save.py  warnings.py
src/edit/pipeline_V2/: __init__.py  config.py  controller.py  decorators.py  exceptions.py  filters.py  graph.py  iterators.py  operation.py  parallel.py  pipeline_V2.yaml  samplers.py  save.py  step.py  validation.py
src/edit/training/: __init__.py  commands.py  dataindex.py  index.py  logger.py  manage.py  variable.py
tests/: fake_pipeline_steps.py  test_filters.py  test_iteration.py  test_sampling.py
tests/test_controller/: test_branchpoints.py  test_joining.py  test_split.py  test_unify.py
tests/test_operation/: test_recognised_types.py
tests/test_pipeline/: test_idx_mod.py  test_sequence.py  test_temporal_idx_mod.py
tests/training/: test_exists.py
utils/: MANIFEST.in  pyproject.toml
utils/src/edit/utils/: __init__.py  context.py  decorators.py  exceptions.py  iPython.py  parameter.py  warnings.py
utils/src/edit/utils/data/: __init__.py  numpy_xarray.py
utils/src/edit/utils/data/tesselator/: __init__.py
utils/src/edit/utils/data/tesselator/_patching/: __init__.py  patches.py  reorder.py  subset.py
utils/src/edit/utils/imports/: __init__.py  parse_imports.py
utils/src/edit/utils/parsing/: __init__.py  init_parsing.py  names.py
utils/src/edit/utils/repr_utils/: __init__.py  html.py  standard.py
utils/src/edit/utils/repr_utils/static/css/: style.css
utils/tests/edit/utils/data/tesselator/: test_tesselator.py
(+271 files in other folders)
