[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "edit-pipeline"
description = "Data Pipelines with EDIT"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["edit"]
authors = [
  {email = "harrison.cook@bom.gov.au"},
  {name = "Harrison Cook"}
]
maintainers = [
  {name = "Harrison Cook", email = "harrison.cook@bom.gov.au"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "edit-utils>24.07.1", 
    "edit-data>24.07.1",
    "xarray",
    "numpy",
    "pandas",
    "graphviz",
    "einops",
]


dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "edit.pipeline.__version__"}

[project.optional-dependencies]
distributed = [
  "dask",
  "distributed",
]
all = [
  "edit-pipeline[distributed]",
]

[project.urls]
homepage = "https://bom.gov.au"
documentation = "https://git.nci.org.au/bom/dset/edit-package/documentation"
repository = "https://git.nci.org.au/bom/dset/edit-package/pipeline_v2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"] 

[tool.ruff.lint]
ignore-init-module-imports = false