[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]


[project]
name = "edit-training"
description = "Machine Learning Training with EDIT"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["edit"]
authors = [
  {email = "harrison.cook@bom.gov.au"},
  {name = "Harrison Cook"}
]
maintainers = [
  {name = "Harrison Cook", email = "harrison.cook@bom.gov.au"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "edit-pipeline",
    "edit-utils>=1.1.0",
    "einops", 
    "scikit-learn", 
    "scipy", 
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.optional-dependencies]
lightning = [
  "lightning",
  "tensorboard",
  "torch", 
  "piqa",
  "tensorly",
]
pytorch =[
  "edit.training[lightning]",
]
xgboost = [
  "xgboost",
  "scikit-learn",
]
onnx = [
  "onnx",
  "onnxruntime",
]
onnx_gpu = [
  "onnxruntime_gpu",
]
all = [
  "edit-training[lightning]",
  "edit-training[xgboost]",
  "edit-training[onnx_gpu]",
]


[project.urls]
homepage = "https://bom.gov.au"
documentation = "https://git.nci.org.au/bom/dset/edit-package/documentation"
repository = "https://git.nci.org.au/bom/dset/edit-package/training"

[project.scripts]
edit-training = "edit.training.commands:entry_point"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["edit.training"]
where = ["src/"]

[tool.setuptools_scm]
version_file = "src/edit/training/_version.py"