[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "edit-data"
description = "Data Obfuscation and manipulation tools"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["edit"]
authors = [
  {email = "harrison.cook@bom.gov.au"},
  {name = "Harrison Cook"}
]
maintainers = [
  {name = "Harrison Cook", email = "harrison.cook@bom.gov.au"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "xarray",
  "dask",
  "netcdf4",
  "numpy",
  "matplotlib",
  "geopandas",
  "shapely",
  "tqdm",
  "pyyaml",
  "edit-utils",
  "click",
  "filelock",
  "urllib3",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "edit.data.__version__"}

[project.optional-dependencies]
download = [
  "cdsapi",
  "ecmwf-opendata",
  "eccodes",
]
intake = [
  "intake-esm",
  "intake",
]
all = [
  "edit-data", "edit-data[download]", "edit-data[intake]"
]

[project.urls]
homepage = "http://bom.gov.au"
documentation = "https://git.nci.org.au/bom/dset/edit-package/documentation"
repository = "https://git.nci.org.au/bom/dset/edit-package/data"

[project.scripts]
edit-data = "edit.data.commands:entry_point"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
where = ["src"] 
