[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "edit-utils"
description = "Utilities for EDIT"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["edit"]
authors = [
  {email = "harrison.cook@bom.gov.au"},
  {name = "Harrison Cook"}
]
maintainers = [
  {name = "Harrison Cook", email = "harrison.cook@bom.gov.au"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
    "IPython",
    "pillow",
    "pyyaml",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "edit.utils.__version__"}

[project.optional-dependencies]
data = [
  "numpy",
  "scikit-learn",
  "xarray",
]
all = ["edit-utils[data]"]

[project.urls]
homepage = "https://bom.gov.au"
documentation = "https://git.nci.org.au/bom/dset/edit-package/documentation"
repository = "https://git.nci.org.au/bom/dset/edit-package/utils"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"] 
